--- a/Project_itya-love/index.html
+++ b/Project_itya-love/index.html
@@ -8,7 +8,7 @@
         <link rel="icon" href="icon/icon.png" type="image/png">
         <link rel="apple-touch-icon" href="icon/icon.png">
         <link rel="stylesheet" type="text/css" href="fonts/gamefont.css">
-        <title>あつまれ しょくしゅの森</title>
+        <title>ときめきマテリアル☆現代サンプルマップ</title>
     </head>
     <body style="background-color: black">
         <script type="text/javascript" src="js/libs/pixi.js"></script>
